[Serialization] Make requirement signature conformance loading lazy.

While the original commit was expected to have no effective impact, it
turned out to actually solve some circularity issues after all
involving protocols that inherit from other protocols. It should be a
mild compile-time win as well in cases where the requirement signature
is not needed at all.

Test in subsequent commit.

https://bugs.swift.org/browse/SR-5191 / rdar://problem/33804554

(cherry picked from commit 897effec58194ba5e0b29103d7ef3f1f1fcbec4c)